第二次提交

--- a/wos/WebContent/WEB-INF/web.xml
+++ b/wos/WebContent/WEB-INF/web.xml
@@ -17,7 +17,7 @@
     </context-param>
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>classpath*:spring/applicationContext.xml classpath*:spring/applicationContext-app-override.xml</param-value>
+        <param-value>classpath*:spring/applicationContext.xml</param-value>
     </context-param>
     
     <filter>
