--- a/wos/pom.xml
+++ b/wos/pom.xml
@@ -48,31 +48,9 @@
     </properties>
   <dependencies>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-    	<groupId>javax.servlet</groupId>
-    	<artifactId>jsp-api</artifactId>
-    	<version>2.0</version>
-    	<scope>provided</scope>
-    </dependency>
-    <dependency>
     	<groupId>javax.servlet</groupId>
     	<artifactId>jstl</artifactId>
     	<version>1.2</version>
-    </dependency>
-    <dependency>
-    	<groupId>com.fasterxml.jackson.jaxrs</groupId>
-    	<artifactId>jackson-jaxrs-json-provider</artifactId>
-    	<version>${jackson.version}</version>
-    </dependency>
-    <dependency>
-    	<groupId>org.quartz-scheduler</groupId>
-    	<artifactId>quartz</artifactId>
-    	<version>${quartz.version}</version>
     </dependency>
     <dependency>
     	<groupId>dom4j</groupId>
@@ -98,6 +76,31 @@
     <dependency>
     	<groupId>org.springframework</groupId>
     	<artifactId>spring-webmvc</artifactId>
+    	<version>${spring.version}</version>
+    </dependency>
+    <dependency>
+    	<groupId>log4j</groupId>
+    	<artifactId>log4j</artifactId>
+    	<version>${log4j.version}</version>
+    </dependency>
+    <dependency>
+    	<groupId>org.codehaus.jackson</groupId>
+    	<artifactId>jackson-mapper-asl</artifactId>
+    	<version>1.9.11</version>
+    </dependency>
+    <dependency>
+    	<groupId>commons-fileupload</groupId>
+    	<artifactId>commons-fileupload</artifactId>
+    	<version>1.2.1</version>
+    </dependency>
+    <dependency>
+    	<groupId>commons-io</groupId>
+    	<artifactId>commons-io</artifactId>
+    	<version>${commons-io.version}</version>
+    </dependency>
+    <dependency>
+    	<groupId>org.springframework</groupId>
+    	<artifactId>spring-context-support</artifactId>
     	<version>${spring.version}</version>
     </dependency>
   </dependencies>
