--- a/wos/pom.xml
+++ b/wos/pom.xml
@@ -103,5 +103,15 @@
     	<artifactId>spring-context-support</artifactId>
     	<version>${spring.version}</version>
     </dependency>
+    <dependency>
+    	<groupId>javax.servlet</groupId>
+    	<artifactId>servlet-api</artifactId>
+    	<version>2.5</version>
+    </dependency>
+    <dependency>
+    	<groupId>javax.servlet</groupId>
+    	<artifactId>jsp-api</artifactId>
+    	<version>2.0</version>
+    </dependency>
   </dependencies>
 </project>
